# Kmeans-with-CUDA

./: .gitignore  CMakeLists.txt  KMeans.cpp  KMeans.cu  data_generator.cu  display.cpp  main.cpp  main.cu  readme.md
include/: helper.h
lib/: data_generator.cu  data_generator.h  kernel.cu  matrix.cu
ploting/: plot_generator.py
